[feature/myaccount] Adjustment Edit Profile

--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -8,6 +8,7 @@ $secondary-default: #E30613;
 $secondary-dark: #BD000B;
 $secondary-light: #E30613;
 $blue-dark: #4320A8;
+$blue-dark-active: #402493;
 $suport-color-01: #5E595A;
 $suport-color-02: #27292D;
 $suport-color-03: #B18808;
