--- a/sass/header/vtex.login.scss
+++ b/sass/header/vtex.login.scss
@@ -45,10 +45,12 @@
     white-space: pre-line;
     line-height: 14px;
     text-align: left;
+    margin-right: 30px;
     &::after {
       content: "";
       display: inline-block;
       position: absolute;
+      left: 30px;
       width: 140px;
       height: 55px;
       background-repeat: no-repeat;
