Feat: Pagina institucional para o desktop pronta

--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -64,3 +64,4 @@ $background-footer: #292F33;
 $background-bottom-footer: #17171B;
 $blue-active: #291660;
 $blue-hover: #0B1658;
+$blue-dark-text: #1B0E41;
