--- a/sass/header/vtex.minicart.scss
+++ b/sass/header/vtex.minicart.scss
@@ -75,7 +75,7 @@
       }
     }
     &:hover {
-      background-color: #1B0E41;
+      background-color: $blue-dark-text;
       border-color: transparent;
     }
   }
