--- a/sass/editorial/vtex.slider-layout.scss
+++ b/sass/editorial/vtex.slider-layout.scss
@@ -1,28 +1,24 @@
-.slide--quemSomos-carrosel{
-  margin-left:0% !important;
-  margin-right: 0% !important;
-  @media screen and (max-width: 768px) {
-    width: 100% !important;   
-  }
-}
-.sliderTrack--quemSomos-carrosel{
-  gap: 16px;
-  @media screen and (max-width: 768px) {
-      gap: 8px;
-      width: 100% !important;
-      margin: 0 8px;    
-  }
+@import '../_variables.scss';
+
+.slide--editorial-carroselLastBanners {
+  padding: 0 0.4rem 2rem;
 }
 
-.slideChildrenContainer--quemSomos-carrosel {
-  width: 564px;
-  @media screen and (max-width: 768px) {
-    width: 288px;
+.paginationDotsContainer.paginationDotsContainer--editorial-carroselLastBanners {
+  bottom: 10px;
+}
+
+.paginationDot.paginationDot--editorial-carroselLastBanners {
+  width: 10px !important;
+  height: 10px !important;
+  margin-top: 10px;
+
+  &--isActive {
+    background-color: $blue-active;
   }
 }
 
-.sliderTrackContainer--quemSomos-carrosel::-webkit-scrollbar {
-  display: none;
+.sliderRightArrow.sliderRightArrow--editorial-carroselLastBanners,
+.sliderLeftArrow.sliderLeftArrow--editorial-carroselLastBanners {
+  top: 120px;
 }
-
-
