Fix: Mudando o background do breadcrumb para branco

--- a/sass/product/vtex.flex-layout.scss
+++ b/sass/product/vtex.flex-layout.scss
@@ -272,7 +272,7 @@
 }
 .flexRow {
   &--breadcrumb {
-    background-color: $lightgrey-light;
+    background-color: $white;
     padding: 1rem 0;
     @include mobile {
       margin-bottom: 1rem;
