Feat: Estruturado e feito uma estilização básica na pagina not found

--- a/sass/search/vtex.flex-layout.scss
+++ b/sass/search/vtex.flex-layout.scss
@@ -133,7 +133,7 @@
     }
   }
 }
-
-// .flexRowContent--filterRow {
-//   //transform: translateY(-84px);
-// }
+// Notfound
+.flexCol--notfound-containerMain {
+  align-items: center;
+}
