Fix: Alinhando botão de voltar para a home

--- a/sass/search/vtex.flex-layout.scss
+++ b/sass/search/vtex.flex-layout.scss
@@ -136,4 +136,10 @@
 // Notfound
 .flexCol--notfound-containerMain {
   align-items: center;
+  .flexColChild--notfound-containerMain {
+    padding: 10px;
+    &:last-child {
+      padding-bottom: 3rem;
+    }
+  }
 }
