--- a/sass/search/vtex.store-link.scss
+++ b/sass/search/vtex.store-link.scss
@@ -6,9 +6,7 @@
   font-weight: 500;
   color: $white;
   background-color: $blue-active;
-  padding: 10px;
+  padding: 10px 70px;
   border-radius: 2px;
   border: none;
-  width: 300px;
-  padding-bottom: 2rem;
 }
