--- a/checkout-ui-custom/checkout-ui-custom/checkout6-custom.css
+++ b/checkout-ui-custom/checkout-ui-custom/checkout6-custom.css
@@ -3257,12 +3257,95 @@ body {
 .step, .cart, .totalizers {
   border-radius: 0px !important; }
 
-.header-container {
-  display: flex;
-  justify-content: space-between;
-  margin: 36px 32px 46px;
-  border-bottom: 1px solid #DDDDDD;
-  padding-bottom: 28px; }
+  .header-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    box-shadow: 0px 1px 6px 0px rgba(0,0,0,0.3);
+    margin-bottom: 40px;
+    height: 60px;
+  }
+  
+  .footer-container {
+    width: auto;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin-top: 40px;
+  }
+   
+  .footer-container-upper {
+    height: 70px;
+    background: #292F33;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+  }
+  
+  .footer-content-upper {
+    width: 100%;
+    padding-left: 62px;
+    max-width: 1440px;
+     box-sizing: border-box;
+    display: flex;
+    align-content: center;
+    justify-content: flex-start;
+    height: 70px;
+  }
+  
+  .footer-upper-text {
+    font-size: 20px;
+    color: #FFFFFF;
+    line-height: 24px;
+    margin-block: auto;
+  }
+  
+  .footer-lock-icon {
+  width: 20px;
+  height: 22px;
+  margin-left: 20px;
+  margin-right: 36px;
+  margin-block: auto;
+  }
+  
+  .footer-card {
+    width: 58px;
+    height: 40px;
+    margin-right: 9px;
+    margin-block: 15px;
+  }
+  
+  .footer-container-lower {
+    height: 45px;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    background: #17171B;
+  }
+  
+  .footer-content-lower {
+    height: 45px;
+    max-width: 1440px;
+    width: 100%;
+    box-sizing: border-box;
+    display: flex;
+    justify-content: space-between;
+    padding-left: 65px;
+    padding-right: 76px;
+  }
+  
+  .footer-info {
+    margin-block: auto;
+    font-size: 13px;
+    line-height: 15px;
+    color: #FFFFFF;
+  }
+  
+  .footer-vtex-logo {
+    margin-top: 12.5px;
+    height: 20px;
+  }
 
 .footer {
   text-align: center; }
